package com.backbase.assignment.data

data class DataGenre(
    var id: Int,
    var name: String
)