package com.backbase.assignment.domain.usecase

interface RetrieveMoviesUseCase {
    operator fun invoke()
}