package com.backbase.assignment.presentation

sealed class UIGenre {
    object Action : UIGenre()
    object Adventure : UIGenre()
    object Animation : UIGenre()
    object Comedy : UIGenre()
    object Crime : UIGenre()
    object Documentary : UIGenre()
    object Drama : UIGenre()
    object Family : UIGenre()
    object Fantasy : UIGenre()
    object History : UIGenre()
    object Horror : UIGenre()
    object Music : UIGenre()
    object Mystery : UIGenre()
    object Romance : UIGenre()
    object ScienceFiction : UIGenre()
    object TVMovie : UIGenre()
    object Thriller : UIGenre()
    object War : UIGenre()
    object Western : UIGenre()
}
